# simpledms

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.py
simpledms/: __main__.py  main.py  pdfhandler.py  rules.py  utils.py
simpledms/ui/: about.py  about.ui  editrules.py  editrules.ui  main_simpledms.py  main_simpledms.qrc  main_simpledms.ui  main_simpledms_rc.py  resources.py
tests/: test_simpledms.py
